--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -279,6 +279,11 @@ header {
     padding: 3px 20px;
     line-height: 24px;
     cursor: pointer;
+
+    strong {
+        padding: 0;
+        margin: 0;
+    }
 }
 
 .tt-suggestion.tt-cursor, .tt-suggestion:hover {
@@ -738,3 +743,24 @@ footer {
     color: #FFF;
 }
 
+#tag-search {
+    .bootstrap-tagsinput {
+        span.label-info {
+            background-color: $color_input_tags_background;
+        }
+
+        div.tt-menu div.tt-suggestion:hover {
+            background-color: $color_input_tags_background;
+        }
+
+        .tt-empty {
+            padding: 3px 20px;
+            line-height: 24px;
+            font-style: italic;
+
+            & > span {
+                font-weight: bold;
+            }
+        }
+    }
+}
