--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -539,7 +539,7 @@ header {
 /* CREATE LIST PAGE
 â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“â€“ */
 
-#articles-container, #search-products{
+#articles-container, #search-products, #info-container, #recap-container{
   padding: 0px;
   -webkit-box-shadow: 5px 5px 0px $color_background_dark;
   -moz-box-shadow: 5px 5px 0px $color_background_dark;
