--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -311,6 +311,7 @@ header {
 
     .pagination-box {
       width: 100%;
+      margin-top: 2rem;
       text-align: center;
 
       .pagination {
@@ -342,7 +343,7 @@ header {
       width: 250px;
       display: inline-block;
       margin-right: 3rem;
-      margin-bottom: 1rem;
+      margin-bottom: 2rem;
       background-color: white;
       border: 0px solid $color_separation;
       -webkit-border-radius: 1px;
@@ -451,7 +452,7 @@ header {
         }
       }
 
-      button {
+      button, a{
         width: 100%;
         border: 0;
         padding: 0.75rem;
@@ -467,6 +468,7 @@ header {
           &:hover {
             background-color: $color_background_grey;
             color: $color_text;
+            text-decoration: none;
           }
 
           &:active {
@@ -787,4 +789,4 @@ header {
         }
       }
     }
-  }  
+  }
