cleaning matthieu's mess .

--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -452,7 +452,7 @@ __________________________________________________ */
         }
       }
 
-      button, a{
+      button, a {
         width: 100%;
         border: 0;
         padding: 0.75rem;
@@ -462,181 +462,187 @@ __________________________________________________ */
         text-align: center;
         text-decoration: none;
         outline: none;
+        display: inline-block;
 
         &:hover, &:focus {
-
-          &:hover {
-            background-color: $color_background_grey;
-            color: $color_text;
-            text-decoration: none;
-          }
-
-          &:active {
-            color: $color_link_hover;
-            background-color: $color_background_grey;
-          }
+          background-color: $color_background_grey;
+          color: $color_text;
+          text-decoration: none;
         }
 
-        // Add to cart button
-        button:last-child {
-          color: $color_text_white;
-          background-color: $color_background_red;
+        &:active {
+          color: $color_link_hover;
+          background-color: $color_background_grey;
+        }
 
-          &:active {
-            color: $color_link_hover;
-            background-color: $color_background_grey;
-          }
+      }
+
+      // Add to cart button
+      button:last-child {
+        color: $color_text_white;
+        background-color: $color_background_red;
+
+        &:active {
+          color: $color_link_hover;
+          background-color: $color_background_grey;
+        }
+      }
+    }
+  }
+
+  .list-detail {
+    max-width: 600px;
+    margin: auto;
+
+    @media screen and (max-width: 600px) {
+      .list-header {
+        & > div {
+          width: 100% !important;
+        }
+
+        h1 {
+          margin-top: 0;
         }
       }
     }
 
-    .list-detail {
-      max-width: 600px;
-      margin: auto;
+    .cards-container {
+      text-align: center;
+    }
 
-      @media screen and (max-width: 600px) {
-        .list-header {
-          & > div {
-            width: 100% !important;
-          }
+    .list-header {
+      margin-bottom: 2rem;
 
-          h1 {
-            margin-top: 0;
+      h1 {
+        margin-bottom: 0;
+        overflow-wrap: break-word;
+        text-align: left;
+      }
+
+      h5 {
+        color: $color_text_grey;
+        margin-top: 0;
+        margin-left: 1rem;
+      }
+
+      .list-options {
+        text-align: center;
+
+        h1 {
+          text-align: center;
+          overflow-wrap: none;
+        }
+
+        button {
+          font-size: 1.8rem;
+          background-color: $color_background_red;
+          color: $color_text_white;
+          margin-top: 1rem;
+          padding: 0.75rem 0.75rem;
+          border: 0;
+
+          &:active {
+            background-color: $color_background_grey;
+            color: $color_link_hover;
           }
         }
       }
 
-      .cards-container {
-        text-align: center;
+    }
+
+    .list-images {
+      width: 100%;
+      text-align: center;
+      margin-bottom: 1rem;
+
+      img {
+        cursor: pointer;
+        height: 7rem;
+        width: 7rem;
+        border: 1px dashed $color_separation;
+
+        &:hover {
+          border: 1px dashed $color_background_red;
+        }
       }
+    }
 
-      .list-header {
-        margin-bottom: 2rem;
+    .cards-container {
+      .card-snapshots {
+        img {
+          width: 12rem;
+          height: 12rem;
+        }
+      }
+    }
+  }
+    // list-detail
 
-        h1 {
-          margin-bottom: 0;
-          overflow-wrap: break-word;
-          text-align: left;
+  .comments-master {
+    max-width: 600px;
+    margin: auto;
+
+    .comments-header {
+      text-align: center;
+    }
+
+    .comments-form {
+
+    }
+
+    .comments {
+      clear: both;
+
+      .comment {
+
+        & + .comment {
+          border-top: 1px solid $color_separation;
+        }
+
+        h3 {
+
         }
 
         h5 {
-          color: $color_text_grey;
-          margin-top: 0;
-          margin-left: 1rem;
+          font-style: italic;
         }
 
-        .list-options {
-          text-align: center;
+        p {
 
-          h1 {
-            text-align: center;
-            overflow-wrap: none;
-          }
-
-          button {
-            font-size: 1.8rem;
-            background-color: $color_background_red;
-            color: $color_text_white;
-            margin-top: 1rem;
-            padding: 0.75rem 0.75rem;
-            border: 0;
-
-            &:active {
-              background-color: $color_background_grey;
-              color: $color_link_hover;
-            }
-          }
-        }
-
-      }
-
-      .list-images {
-        width: 100%;
-        text-align: center;
-
-        img {
-          cursor: pointer;
-          height: 7rem;
-          width: 7rem;
-        }
-      }
-
-      .cards-container {
-        .card-snapshots {
-          img {
-            width: 12rem;
-            height: 12rem;
-          }
         }
       }
     }
-    // list-detail
-
-    .comments-master {
-      max-width: 600px;
-      margin: auto;
-
-      .comments-header {
-        text-align: center;
-      }
-
-      .comments-form {
-
-      }
-
-      .comments {
-        clear: both;
-
-        .comment {
-
-          & + .comment {
-            border-top: 1px solid $color_separation;
-          }
-
-          h3 {
-
-          }
-
-          h5 {
-            font-style: italic;
-          }
-
-          p {
-
-          }
-        }
-      }
-    }
-  }
-
-  .star-ratings-sprite {
-    background: url("/public/images/rating_empty.png") repeat-x;
-    font-size: 0;
-    height: 2rem;
-    line-height: 0;
-    overflow: hidden;
-    text-indent: -999em;
-    width: 10rem;
-    margin: 0 auto;
-    background-size: 2rem;
-  }
-
-  .star-ratings-sprite-rating {
-    background: url("/public/images/rating_filled.png") repeat-x;
-    background-position: 0 100%;
-    float: left;
-    height: 2rem;
-    display: block;
-    background-size: 2rem;
-  }
-
-
-  // utility classes can use !important
-  .btn-activated {
-    background-color: $color_background_grey !important;
-    color: $color_text !important;
   }
 }
+
+.star-ratings-sprite {
+  background: url("/public/images/rating_empty.png") repeat-x;
+  font-size: 0;
+  height: 2rem;
+  line-height: 0;
+  overflow: hidden;
+  text-indent: -999em;
+  width: 10rem;
+  margin: 0 auto;
+  background-size: 2rem;
+}
+
+.star-ratings-sprite-rating {
+  background: url("/public/images/rating_filled.png") repeat-x;
+  background-position: 0 100%;
+  float: left;
+  height: 2rem;
+  display: block;
+  background-size: 2rem;
+}
+
+
+// utility classes can use !important
+.btn-activated {
+  background-color: $color_background_grey !important;
+  color: $color_text !important;
+}
+
   /* CREATE LIST PAGE
   –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
