passed user paramameters to the view

--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -877,7 +877,7 @@ __________________________________________________ */
       }
     }
   }
-
+}
 .captcha-contact {
     display: table;
     margin: 0 auto;
