--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -690,6 +690,10 @@ __________________________________________________ */
     background-color: #f4f4f4;
   }
 
+  .no-article{
+    text-align: center;
+  }
+
   .article_name{
     font-weight: bold;
   }
