--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -514,6 +514,7 @@ __________________________________________________ */
       margin-bottom: 2rem;
 
       h1 {
+        margin-top: 1rem;
         margin-bottom: 0;
         overflow-wrap: break-word;
         text-align: left;
