--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -484,6 +484,8 @@ __________________________________________________ */
 
         .card-quantity-list{
           margin-bottom: 15px;
+          font-size: 1.4rem;
+          font-weight: none;
         }
 
         .card-price-list, .card-quantity-list {
