dummy view for cart

--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -961,6 +961,10 @@ __________________________________________________ */
   table {
     width: 100%;
 
+    .no-wrap {
+      white-space: nowrap;
+    }
+
     tr {
       background-color: $color_background_grey;
 
@@ -970,12 +974,6 @@ __________________________________________________ */
         @media screen and (max-width: $bootstrap-sm) {
           padding: 0.2rem;
         }
-      }
-    }
-
-    td {
-      &.cart-small {
-        width: 3rem;
       }
     }
 
@@ -989,6 +987,12 @@ __________________________________________________ */
       tr:nth-child(2n+1) {
         background-color: $color_background;
       }
+
+      img {
+        width: 7rem;
+        height: 7rem;
+      }
+
     }
 
     tfoot {
