Validation message css

--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -875,6 +875,16 @@ __________________________________________________ */
     }
   }
 
+  .thanks{
+    color: #3c763d;
+    background-color: #dff0d8;
+    border-color: #d6e9c6;
+    padding: 15px;
+    margin: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+  }
+  
 /* ACCOUNT
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
