--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -883,6 +883,7 @@ __________________________________________________ */
     margin: 20px;
     border: 1px solid transparent;
     border-radius: 4px;
+    text-align: center;
   }
   
 /* ACCOUNT
